--- a/public/styles/scss/base/_fonts.scss
+++ b/public/styles/scss/base/_fonts.scss
@@ -2,23 +2,42 @@
     Fonts
     ================== */
 
-h1 { @include fonts(3.2, 400, $title_font); }
-h2 { @include fonts(2.7, 400, $title_font); }
-h3 { @include fonts(2.3, 300, $title_font); }
-h4, .me-text { @include fonts(1.9, 300, $text_font); }
+*::selection {
+    background: $main-third--special_col;
+    color: #fff;
+}
+
+*::-moz-selection {
+    background: $main-third--special_col;
+    color: #fff;
+}
+
+h1 { @include fonts(2.8, 400, $title_font); }
+h2 { @include fonts(2.5, 400, $title_font); }
+h3 { @include fonts(2, 300, $title_font); }
+h4, .me-text { @include fonts(1.8, 300, $text_font); }
 p, .text { @include fonts(1.65, 300, $text_font); }
-.sm-text { @include fonts(1.4, 300, $text_font); }
+.sm-text { @include fonts(1.3, 300, $text_font); }
 
 @media screen and (max-width: $portrait_tablet_size) {
-    h1 { font-size: 2.9rem; }
-    h2 { font-size: 2.4rem; }
-    h3 { font-size: 2rem; }
-    h4, .me-text { font-size: 1.7rem; }
+    h1 { font-size: 2.6rem; }
+    h2 { font-size: 2.3rem; }
+    h3 { font-size: 1.8rem; }
+    h4, .me-text { font-size: 1.6rem; }
     p, .text { font-size: 1.45rem; }
-    .sm-text { font-size: 1.2rem; }
+    .sm-text { font-size: 1.1rem; }
 }
 
 p, .paragraph { text-indent: 20px; }
+
+.highlight {
+    font: {
+        size: inherit;
+        weight: 400;
+    }
+    color: $main-third--special_col;
+    text-decoration: underline;
+}
 
 .text-heading {
     @include inline-block(middle);
